syntax = "proto3";

package customer;

option go_package = "github.com/tunvx/simplebank/grpc/pb/cusman/customer";

message VerifyEmailRequest {
    string email_id = 1;
    string secret_code = 2;
    int32 shard_id = 3;
}

message VerifyEmailResponse {
    bool is_verified = 1;
} 